--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -25,3 +25,10 @@ section{
     color: red;
     font-size: 300px;
 }
+
+h1 {
+  font-family: "Metal Mania", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 80px;
+}
