--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -32,3 +32,11 @@ h1 {
   font-style: normal;
   font-size: 50px;
 }
+
+h2{
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 50px;
+}
